tests/netgen/grid/errors/grid_x_length__zero/errors.netgen
Error: The distance between nodes must be at least 0.10
Quitting (on error).
